# zhixi

./: .env.example  .gitignore  CLAUDE.md  Caddyfile  Dockerfile  Makefile  README.md  crontab  docker-compose.yml  pyproject.toml
.githooks/: pre-commit
.github/: pull_request_template.md
.github/workflows/: ci.yml
admin/: biome.json  index.html  package.json  playwright.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
admin/e2e/: accounts.spec.ts  api-costs.spec.ts  dashboard.spec.ts  digest-edit.spec.ts  digest.spec.ts  helpers.ts  history.spec.ts  logs.spec.ts  preview.spec.ts  settings.spec.ts  setup-login.spec.ts
admin/src/: App.vue  main.ts
alembic/: env.py
alembic/versions/: 0e411c078c0a_initial_schema.py  337e9caa2833_add_topic_digest_date_index.py
app/: __init__.py  auth.py  cli.py  config.py  crud.py  crypto.py  database.py  logging_config.py  main.py  middleware.py
app/api/: __init__.py  accounts.py  auth.py  dashboard.py  debug.py  deps.py  digest.py  history.py  manual.py  settings.py  setup.py
app/clients/: __init__.py  claude_client.py  notifier.py  (+2 more)
docs/: ZhiXi_Final_Spec_v1.md
scripts/: seed_test_data.py
tests/: conftest.py  factories.py  test_accounts.py  test_add_tweet_api.py  test_analyzer.py  test_api.py  test_auth.py  test_backup.py  test_batch_merger.py  test_batch_strategy.py  test_claude_client.py  test_config.py  test_cost_logger.py  test_cover_generator.py  test_cover_prompts.py  test_crypto.py  test_dashboard_api.py  test_debug_api.py  test_digest_api.py  test_digest_edit_api.py  test_digest_service.py  test_digest_service_cover.py  test_error_handling.py  test_fetch_service.py  test_fetcher.py  test_gemini_client.py  test_heat_calculator.py  test_history_api.py  test_json_validator.py  test_lock_service.py  test_logging.py  test_manual_fetch_api.py  test_manual_generate_cover_api.py  test_markdown_renderer.py  test_middleware.py  test_migration.py  test_notifier.py  test_pipeline_concurrency.py  test_pipeline_service.py  test_preview_api.py  (+16 more)
(+145 files in other folders)
